--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <span name="telegram" onclick="copy(this)" style="cursor: pointer;">Telegram: @Gidgetcoin</span><br />
             <span name="twitter" onclick="copy(this)" style="cursor: pointer;">Twitter: @Gidgetcoin</span><br />
             <span name="contract" onclick="copy(this)" style="cursor: pointer;">Contract:
-                GidgeojduwU61eV...7aqHejBYuFCC5j</span><br />
+                Gidgeo...uFCC5j</span><br />
 
 </body>
 
