--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </h1>
         <span
             style="text-decoration: line-through; text-decoration-color: red; text-decoration-thickness: 6px; font-size: 24px;"><b>Did
-                you</b> know the $GIDGET ETF is about to be approved?</span><br />It's coming! $GIDGET/</span><br />
+                you</b> know the $GIDGET ETF is about to be approved?</span><br />It's coming! $GIDGET</span><br />
         <img style="max-width: 64px;" src="./gidget/face-with-hand-over-mouth_1f92d.gif" /><br />
         <p><b>Gidget</b> is a white,<br /> fluffy Pomeranian with big blue eyes,<br /> little pink ears, short
             feet,<br />
@@ -87,9 +87,9 @@
                 crocodile
                 who is much bigger than her,<br />stood no chance against an enraged <b>Gidget</b>.<br />
             </span><br />
-            <span><b>Tokennomics:</b><br />
+            <span><b>Tokenomics:</b><br />
                 Presale 50%<br />
-                Luquidity Pools (28.5%)<br />
+                Liquidity Pools (28.5%)<br />
                 Burn Token (21.5%)<br />
             </span><br />
             <!-- <span>
