--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                 crocodile
                 who is much bigger than her,<br />stood no chance against an enraged <b>Gidget</b>.<br />
             </span><br />
-            <span><b></b><br />
-                Token: Gidgetcoin
-                Ticker: GIDGET
-                Supply: 1.000.000.000
-                Presale: 80%
-                Liquidity Pools 20%
+            <span><b>Tokenomics:</b><br />
+                Token: Gidgetcoin<br />
+                Ticker: GIDGET<br />
+                Supply: 1.000.000.000<br />
+                Presale: 80%<br />
+                Liquidity Pools 20%<br />
             </span><br />
             <!-- <span>
                 Address to send $SOL 7WJoFSzwc78KmqXuiDtw5BRtTMavg4n1Q6xyHhMhPNaN<br />
@@ -116,6 +116,9 @@
             <img style="width: calc(70vw); max-width: 400px;" src="./gidget/gidget-secretlifeofpets.gif"><br /><br />
             <span name="telegram" onclick="copy(this)" style="cursor: pointer;">Telegram: @Gidgetcoin</span><br />
             <span name="twitter" onclick="copy(this)" style="cursor: pointer;">Twitter: @Gidgetcoin</span><br />
+            <span name="contract" onclick="copy(this)" style="cursor: pointer;">Contract:
+                Gidgeo...uFCC5j</span><br />
+
 </body>
 
 </html>
