--- a/404.html
+++ b/404.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        window.location.href = "/"
-    </script>
+    <title>404</title>
 </head>
 <body>
-    
+    <h1>404 Not Found</h1>
 </body>
 </html>
